--- a/package.json
+++ b/package.json
@@ -7,12 +7,31 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pre-commit": "lint-staged"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pre-commit"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json}": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.ts": [
+      "eslint --fix",
+      "tsc --noEmit",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@hfcjoy/eslint-config-typescript": "2.0.1",
     "@types/node": "18.15.5",
     "eslint": "8.36.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.0",
     "prettier": "2.8.6",
     "typescript": "5.0.2"
   }
