--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx --inspect-brk src/app.ts",
     "pre-commit": "lint-staged"
   },
   "husky": {
@@ -26,6 +26,11 @@
       "git add"
     ]
   },
+  "dependencies": {
+    "axios": "1.3.4",
+    "cheerio": "1.0.0-rc.12",
+    "rxjs": "7.8.0"
+  },
   "devDependencies": {
     "@hfcjoy/eslint-config-typescript": "2.0.1",
     "@types/node": "18.15.5",
@@ -33,6 +38,7 @@
     "husky": "8.0.3",
     "lint-staged": "13.2.0",
     "prettier": "2.8.6",
+    "tsx": "3.12.6",
     "typescript": "5.0.2"
   }
 }
