--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx --inspect-brk src/app.ts",
+    "dev": "tsx ./src/app.ts",
     "pre-commit": "lint-staged"
   },
   "husky": {
@@ -28,7 +28,9 @@
   },
   "dependencies": {
     "axios": "1.3.4",
-    "cheerio": "1.0.0-rc.12",
+    "dotenv": "16.0.3",
+    "nodejieba": "2.6.0",
+    "openai": "3.2.1",
     "rxjs": "7.8.0"
   },
   "devDependencies": {
